codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__status_widget_active.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Charging (0s • esc to interrupt)                                              "
"                                                                                "
"                                                                                "
"⚡Ask xcodex to do anything                                                     " Hidden by multi-width symbols: [(1, " ")]
"                                                                                "
"  100% context left · ? for shortcuts                                           "
